refactor: Remove Garbage Collector options; Set to ZGC default